@@ -131,6 +131,9 @@ The following modes are supported:
 The default setting is 'auto', and the current heuristic
 checks that the "TERM" environment variable exists and is
 not empty or "dumb", and that 'isatty(stderr)' holds.
+
+The environment variable "OCAML_COLOR" is considered if "-color" is not
+provided. Its values are auto/always/never as above.
 }%notop
 
 \comp{%
